# LIDEC

./: .gitignore  readme.md
LIDEC/: CMakeLists.txt  config.xml  demoMultithread.cpp  demoXMLLoader.cpp  demoXMLLoader.xml  main.cpp  test.xml  testCLILoader.cpp  testDispatcher.cpp  testExecutors.cpp  testInterpreter.cpp  testXMLLoader.cpp
LIDEC/ArgumentsValidator/include/: Validator.hpp
LIDEC/CLILoader/: CMakeLists.txt
LIDEC/CLILoader/include/: ActionParams.hpp  CLILoader.hpp
LIDEC/CLILoader/src/: ActionParams.cpp  CLILoader.cpp
LIDEC/Dispatcher/: CMakeLists.txt
LIDEC/Dispatcher/include/: Dispatcher.hpp
LIDEC/Dispatcher/src/: Dispatcher.cpp
LIDEC/Executors/: CMakeLists.txt
LIDEC/Executors/include/: Cat.hpp  EchoUp.hpp  Sum.hpp
LIDEC/Executors/src/: Cat.cpp  EchoUp.cpp  Sum.cpp
LIDEC/Interpreter/: CMakeLists.txt
LIDEC/Interpreter/include/: Interpreter.hpp
LIDEC/Interpreter/src/: Interpreter.cpp
LIDEC/XMLLoader/: CMakeLists.txt
LIDEC/XMLLoader/include/: XMLLoader.hpp
LIDEC/XMLLoader/src/: XMLLoader.cpp
